--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -41,7 +41,7 @@
         # See `git help config` (search for push.default)
         # for more information on different options of the below setting.
         #
-        # Setting to git 2.0 default to surpress warning message
+        # Setting to git 2.0 default to suppress warning message
         default = simple
 [status]
 	# showUntrackedFiles = no
