Use iterm 2 nightly for truecolor

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,10 +1,10 @@
 tap 'caskroom/cask'
+tap 'caskroom/versions'
 tap 'homebrew/bundle'
 tap 'homebrew/dupes'
 tap 'homebrew/python'
 tap 'homebrew/science'
 tap 'homebrew/versions'
-tap 'madebymany/custom'
 tap 'neovim/neovim'
 
 brew 'autojump'
@@ -52,7 +52,8 @@ cask 'dropbox'
 cask 'duet'
 cask 'flux'
 cask 'google-chrome'
-cask 'iterm2'
+# cask 'iterm2'
+cask 'iterm2-nightly' # for truecolor
 cask 'karabiner'
 cask 'mplayerx'
 cask 'mongodb'
