Add Office Code Pro and iTerm2

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,5 +1,6 @@
 tap 'caskroom/cask'
 tap 'caskroom/versions'
+tap 'caskroom/fonts'
 tap 'homebrew/bundle'
 tap 'homebrew/dupes'
 tap 'homebrew/python'
@@ -51,6 +52,7 @@ cask 'dash'
 cask 'dropbox'
 cask 'duet'
 cask 'flux'
+cask 'font-office-code-pro'
 cask 'google-chrome'
 # cask 'iterm2'
 cask 'iterm2-nightly' # for truecolor
