use ag instead of pt to fix vim plugins

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -30,7 +30,7 @@ brew 'rbenv-default-gems'
 brew 'reattach-to-user-namespace'
 brew 'redis'
 brew 's3cmd'
-brew 'the_platinum_searcher'
+brew 'the_silver_searcher'
 brew 'tree'
 brew 'watch'
 brew 'caskroom/cask/brew-cask'
