Add to brewfile and node modules

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -13,6 +13,7 @@ brew 'autojump'
 brew 'erlang'
 brew 'elixir'
 brew 'fish'
+brew 'flow'
 brew 'go'
 brew 'fzf', args: ['HEAD']
 brew 'gcc'
@@ -21,6 +22,7 @@ brew 'imagemagick'
 brew 'n' # node version manager
 brew 'keybase'
 brew 'mitmproxy'
+brew 'mongodb'
 brew 'phantomjs'
 brew 'postgresql'
 brew 'pow'
@@ -59,7 +61,6 @@ cask 'google-chrome'
 cask 'iterm2-nightly' # for truecolor
 cask 'karabiner'
 cask 'mplayerx'
-cask 'mongodb'
 cask 'moom'
 cask 'paw'
 cask 'prey'
@@ -86,3 +87,4 @@ cask 'skype'
 cask 'steam'
 cask 'the-unarchiver'
 cask 'zeplin'
+
