--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -56,9 +56,11 @@ cask 'cloud'
 cask 'dash'
 cask 'dropbox'
 cask 'duet'
+cask 'mojibar'
 cask 'flux'
 cask 'font-office-code-pro'
 cask 'google-chrome'
+cask 'handbrake'
 cask 'imageoptim'
 # cask 'iterm2'
 cask 'iterm2-nightly' # for truecolor
