--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-atom.symlink/.apm
-atom.symlink/.node-gyp
-atom.symlink/.storage
-atom.symlink/blob-store
-atom.symlink/compile-cache/
-atom.symlink/packages
-atom.symlink/storage
-atom.symlink/themes
-
-git/gitconfig.symlink
-ruby/rbenv.symlink/versions
-
-fish/config.symlink/fish/fish_history
+.DS_Store
+*~
+*.swp
