--- a/dotfiles/homebrew/Brewfile
+++ b/dotfiles/homebrew/Brewfile
@@ -17,6 +17,7 @@ brew 'dos2unix'
 brew 'emacs-plus'
 brew 'erlang'
 # brew 'homebrew/versions/elasticsearch17'
+brew 'boost'
 brew 'elasticsearch'
 brew 'elixir'
 brew 'fish'
