Karabiner tweaks, add shift standalone for parens))

--- a/dotfiles/homebrew/Brewfile
+++ b/dotfiles/homebrew/Brewfile
@@ -30,7 +30,6 @@ brew 'hive'
 brew 'hub'
 brew 'imagemagick'
 brew 'n' # node version manager
-brew 'keybase'
 brew 'mas'
 brew 'mitmproxy'
 brew 'mongodb'
@@ -49,8 +48,8 @@ brew 'the_silver_searcher'
 brew 'tree'
 brew 'watch'
 brew 'watchman'
-brew 'caskroom/cask/brew-cask'
-brew 'homebrew/dupes/apple-gcc42'
+# brew 'caskroom/cask/brew-cask'
+brew '/apple-gcc42'
 brew 'neovim/neovim/neovim', args: ['HEAD']
 brew 'heroku-toolbelt'
 brew 'python'
@@ -75,13 +74,12 @@ cask 'mojibar'
 cask 'flux'
 cask 'font-office-code-pro'
 cask 'google-chrome'
-cask 'hammerspoon'
 cask 'handbrake'
 cask 'imageoptim'
 # cask 'iterm2'
 cask 'iterm2-nightly' # for truecolor
 cask 'java'
-cask 'karabiner-elements'
+# cask 'karabiner-elements'
 cask 'mplayerx'
 cask 'moom'
 cask 'paw'
@@ -109,3 +107,4 @@ cask 'skype'
 cask 'steam'
 cask 'the-unarchiver'
 cask 'zeplin'
+cask 'docker'
