Add chrome canary

--- a/dotfiles-scripts/homebrew/Brewfile
+++ b/dotfiles-scripts/homebrew/Brewfile
@@ -75,6 +75,7 @@ cask 'mojibar'
 cask 'flux'
 cask 'font-office-code-pro'
 cask 'google-chrome'
+cask 'google-chrome-canary'
 cask 'handbrake'
 cask 'imageoptim'
 # cask 'iterm2'
