--- a/dotfiles-scripts/homebrew/Brewfile
+++ b/dotfiles-scripts/homebrew/Brewfile
@@ -10,39 +10,21 @@ tap 'homebrew/science'
 tap 'homebrew/versions'
 tap 'homebrew/binary'
 tap 'neovim/neovim'
-tap 'd12frosted/emacs-plus'
-tap 'crisidev/homebrew-chunkwm'
-
 
 brew 'archey'
 brew 'awscli'
-brew 'autojump'
-brew 'chunkwm'
-brew 'dos2unix'
-brew 'emacs-plus'
-brew 'erlang'
-# brew 'homebrew/versions/elasticsearch17'
 brew 'boost'
-brew 'elasticsearch'
-brew 'elixir'
 brew 'fish'
-brew 'flow'
 brew 'go'
-brew 'fzf', args: ['HEAD']
 brew 'gcc'
 brew 'GraphicsMagick'
-brew 'hive'
 brew 'hub'
 brew 'imagemagick'
 brew 'kubernetes-cli'
 brew 'n' # node version manager
 brew 'mas'
 brew 'mitmproxy'
-brew 'mongodb'
-brew 'mysql'
-brew 'phantomjs'
 brew 'postgresql'
-brew 'pow'
 brew 'ruby-build'
 brew 'rbenv'
 brew 'rbenv-default-gems'
@@ -50,32 +32,22 @@ brew 'reattach-to-user-namespace'
 brew 'redis'
 brew 'switchaudio-osx'
 brew 'terraform'
-brew 'the_silver_searcher'
 brew 'tree'
 brew 'watch'
 brew 'watchman'
 # brew 'caskroom/cask/brew-cask'
 brew '/apple-gcc42'
-brew 'neovim/neovim/neovim', args: ['HEAD']
 brew 'heroku-toolbelt'
 brew 'python'
 
-cask 'vagrant'
 cask '1password'
-cask 'acorn'
 cask 'alfred'
 cask 'arq'
-cask 'anvil'
 cask 'bartender'
-cask 'beamer'
 cask 'caffeine'
 cask 'caprine' # fb messenger
 cask 'colorsnapper'
-cask 'cloak'
-cask 'cloud'
-cask 'dash'
 cask 'dropbox'
-cask 'duet'
 cask 'mojibar'
 cask 'flux'
 cask 'font-office-code-pro'
@@ -83,15 +55,14 @@ cask 'google-chrome'
 cask 'google-chrome-canary'
 cask 'handbrake'
 cask 'imageoptim'
-# cask 'iterm2'
-cask 'iterm2-nightly' # for truecolor
+cask 'iterm2'
 cask 'java'
-# cask 'karabiner-elements'
+cask 'karabiner-elements'
 cask 'mplayerx'
 cask 'moom'
 cask 'paw'
-cask 'prey'
-cask 'principle'
+# cask 'prey'
+# cask 'principle'
 
 # quicklook
 cask 'qlcolorcode'
