--- a/dotfiles-scripts/homebrew/Brewfile
+++ b/dotfiles-scripts/homebrew/Brewfile
@@ -1,15 +1,16 @@
 cask_args appdir: "/Applications"
 
-tap 'homebrew/cask-cask'
+#tap 'homebrew/cask-cask'
 tap 'homebrew/cask-versions'
 tap 'homebrew/cask-fonts'
 
 tap 'homebrew/bundle'
-tap 'homebrew/dupes'
-tap 'homebrew/python'
-tap 'homebrew/science'
-tap 'homebrew/versions'
-tap 'homebrew/binary'
+#tap 'homebrew/dupes'
+#tap 'homebrew/python'
+#tap 'homebrew/science'
+#tap 'homebrew/versions'
+#tap 'homebrew/binary'
+tap 'homebrew/cask-drivers'
 tap 'neovim/neovim'
 
 brew 'archey'
@@ -37,11 +38,14 @@ brew 'watch'
 brew 'watchman'
 # brew 'caskroom/cask/brew-cask'
 brew '/apple-gcc42'
-brew 'heroku-toolbelt'
 brew 'python'
+brew 'yarn'
+brew 'koekeishiya/formulae/yabai'
+
 
 cask '1password'
 cask 'alfred'
+cask    'android-studio'
 cask 'arq'
 cask 'bartender'
 cask 'caffeine'
@@ -64,6 +68,7 @@ cask 'paw'
 # cask 'prey'
 # cask 'principle'
 cask 'visual-studio-code'
+cask 'nordvpn'
 
 # quicklook
 cask 'qlcolorcode'
@@ -83,6 +88,8 @@ cask 'sketch'
 cask 'send-to-kindle'
 cask 'spotify'
 cask 'skype'
+cask 'slack'
+cask 'zoomus'
 cask 'steam'
 cask 'the-unarchiver'
 cask 'zeplin'
@@ -91,3 +98,4 @@ cask 'whatsapp'
 cask 'chatmate-for-facebook'
 cask 'chatmate-for-whatsapp'
 cask 'visual-studio-code'
+cask 'logitech-options'
